# gnome-sharp

./: .gitignore  ChangeLog  Makefile.am  Makefile.include  README  bootstrap-2.16  bootstrap-2.20  bootstrap-2.24  bootstrap-generic  configure.in.in
art/: Makefile.am
audit/base/: art-sharp.apiinfo  gnome-sharp.apiinfo  gnome-vfs-sharp.apiinfo  gtkhtml-sharp.apiinfo  rsvg-sharp.apiinfo  vte-sharp.apiinfo
gconf/GConf/: ClientBase.cs  Makefile.am  Value.cs  gconf-sharp-2.0.pc.in  gconf-sharp.dll.config.in
gconf/GConf.PropertyEditors/: Makefile.am  gconf-sharp-peditors-2.0.pc.in
gnome/: CanvasPathDef.custom  CanvasText.custom  Gnome.metadata  Makefile.am  Program.custom  gnome-api-2.20.raw  gnome-api.raw  gnome-sharp.dll.config.in
gnome-sharp-desktop/: AUTHORS  HACKING  Makefile.am  README  bootstrap-2.20  bootstrap-generic  configure.in.in
gnome-sharp-desktop/gnomedesktop/: Makefile.am  gnomedesktop-api-2.20.raw  gnomedesktop-sharp.dll.config.in  metadata
gnome-sharp-desktop/sources/: Makefile.am  sources-2.20.xml
gnome/glue/: Makefile.am
gnomevfs/: Makefile.am  gnome-vfs-api-2.20.raw  gnome-vfs-api.raw
gtkhtml/: Makefile.am
rsvg/: Makefile.am
sample/: Makefile.am
sample/gconf/: Makefile.am
sample/gnomevfs/: Makefile.am
sample/rsvg/: Makefile.am
sources/: Makefile.am  gnome-sharp-2.16-sources.xml  gnome-sharp-2.20-sources.xml  gnome-sharp-2.24-sources.xml
vte/: Bg.custom  Makefile.am  Vte.metadata  vte-api.raw  vte-sharp.dll.config.in
